# temp

./: benchmark_permute_grad.py  moe_token_permute.py  moe_token_permute_grad.py  moe_token_permute_grad_test.py  moe_token_unpermute.py  moe_token_unpermute_grad.py  moe_token_utils.py  permute.py  permute_explained.md  permute_grad_explained.md  profile_permute_grad_standalone.py  pyproject.toml  test_layout_perf.py  unpermute_explained.md  unpermute_grad_explained.md
commented_code/: moe_token_permute_grad.py
